# inventory_crud

./: .flake8  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  main.py  proyect.toml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
doc/: crud_operations.md  eschema_bd.md
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.css
scripts/: build_app.bat  build_docs.bat
src/core/: database.py
src/db/: inventory.db
src/models/: __init__.py  employee_model.py  models.py  product.py  product_model.py
src/ui/: app.py  styles.py
src/ui/components/: __init__.py  components.py  frame.py  inventory.py  login.py  stats_panel.py
src/ui/components/inventory/: __init__.py  inventory_frame.py
src/ui/components/login/: enhanced_login.py
src/ui/components/product/: product_form.py  product_table.py
src/ui/components/stats_panel/: categories_section.py  stats_panel.py  stats_section.py
src/utils/: password_utils.py  placeholder_illustration.py
tests/: conftest.py
tests/core/: database_test.py  test_database.py
tests/integration/: app_integration_test.py  test_app_integration.py
tests/models/: models_test.py  test_employee_model.py  test_product_model.py
tests/ui/: components_test.py  product_form_test.py  stats_panel_test.py  test_components.py  test_product_form.py  test_stats_panel.py
